# anywhere-code

./: AGENTS.md  README.md
backend/: backend-run.sh  backend.out  buffer.go  codex-color.sh  config.go  example.env  files.go  git.go  go.mod  http.go  logs.go  main.go  pyproject.toml  requirements.txt  session.go  session_manager.go  tmux.go  ws.go
backend/app/: auth.py  config.py  main.py  routes_sessions.py  storage.py  terminal_ws.py  wsl_tmux.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_sessions.py  test_storage.py  test_terminal_ws.py  test_wsl_tmux.py
docs/: ttyd_install.md  ttyd_usage.md
docs/plans/: 2026-01-28-wsl-web-terminal-design.md  2026-01-29-wsl-web-terminal-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: SessionList.vue  TerminalView.vue
frontend/src/utils/: terminalCache.ts
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts  web-dev.out
web/src/: App.vue  main.ts  styles.css
